# viventium

./: .gitignore  .gitleaksignore  AGENTS.md  CHANGELOG.md  CLAUDE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  LICENSE-MATRIX.md  NOTICE  README.md  SECURITY.md  THIRD_PARTY_LICENSES.md  UPSTREAMS.md  components.lock.json  config.full.example.yaml  config.minimal.example.yaml  config.schema.yaml  git-helper.sh  install.sh  librechat.yaml.example  start_all.sh  viventium-librechat-start.sh
viventium_v0_4/telegram-codex/: .gitignore  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  pyproject.toml
viventium_v0_4/telegram-codex/.github/: pull_request_template.md
viventium_v0_4/telegram-codex/.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml
viventium_v0_4/telegram-codex/app/: __init__.py  access_control.py  codex_cli_bridge.py  config.py  json_state.py  main.py  pairing_server.py  project_registry.py  session_store.py  telegram_bot.py  telegram_files.py  telegram_rendering.py  transcribe_local.py
viventium_v0_4/telegram-codex/config/: projects.example.yaml  settings.example.yaml
viventium_v0_4/telegram-codex/docs/: ARCHITECTURE.md  RELEASE_CHECKLIST.md  SECURITY_MODEL.md  SETUP.md
viventium_v0_4/telegram-codex/tests/: test_access_control.py  test_codex_cli_bridge.py  test_config.py  test_logging.py  test_project_registry.py  test_session_store.py  test_telegram_files.py  test_telegram_rendering.py  test_transcribe_local_models.py
viventium_v0_4/telegram-viventium/TelegramVivBot/: bot.py  config.py  pyproject.toml
viventium_v0_4/telegram-viventium/TelegramVivBot/md2tgmd/: README.md
viventium_v0_4/telegram-viventium/TelegramVivBot/utils/: decorators.py  env.py  librechat_attachments.py  librechat_bridge.py  livekit_bridge.py  scripts.py  singleton.py  (+5 more)
(+873 files in other folders)
